# telsh

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  README_zh.md
.github/workflows/: ci.yml  coverage.yml
docs/: design_zh.md
examples/: main.cpp
include/osp/: log.hpp  platform.hpp  vocabulary.hpp
include/telsh/: command_registry.hpp  telnet_server.hpp  telnet_session.hpp
tests/: test_command_registry.cpp  test_telnet_session.cpp
